--- a/exercicios/aula26/mq02/estilos/retrato.css
+++ b/exercicios/aula26/mq02/estilos/retrato.css
@@ -1,2 +1,7 @@
 @charset "UTF-8";
 /* Configs retrato */
+
+body {
+        background-image: url(../imagens/cev-portrait.jpg);
+        background-position: bottom center;
+}
