--- a/exercicios/aula26/mq02/estilos/style.css
+++ b/exercicios/aula26/mq02/estilos/style.css
@@ -1,2 +1,24 @@
 @charset "UTF-8";
 /* Configs gerais */
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-repeat: no-repeat;
+
+}
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px #111f81;
+    padding: 10px;
+}
+
+body {
+    background-size: contain;
+}
